working on projects section

--- a/index.html
+++ b/index.html
@@ -169,21 +169,21 @@
               <p>Bringing your website ideas to life.</p>
               <p><span id="auto-type" class="text-primary fw-700"></span></p>
             </div>
-            <div class="hero-cta"> 
+            <div class="hero-cta "> 
 
                 <a
                 href="#About-me"
-                class="h4 text-white hero-cta__about">
-                <div  class="hero-cta__hire-icons">
+                class="h4 text-white hero-cta__about display-f align-center bg-primary br-xs mr-3">
+                <span class="pl-1">About me</span>
+                <div  class="hero-cta__hire-arrows">
                   <div class="arrow"></div>
                   <div class="arrow"></div>
                   <div class="arrow"></div>
                 </div>
-                <span>About me</span>
                 
               </a>
 
-               <button class="btn-outline-primary text-white hide-for-medium">
+               <button class="btn-outline-primary text-white hide-for-medium pl-3 pr-3">
                 <i class="fa-solid fa-file-arrow-down"></i>
                 Resume
               </button>
@@ -291,12 +291,7 @@
             PHP / Laravel for back-end and Ionic for mobile developement,
              and I can adapt to whatever tools are required. Currently based in Alkhobar, Saudi Arabia 
              but I’m happy working remotely and have experience in remote teams. I’d love you to check out my works.
-            </p>
-             <div  class="hero-cta__hire-icons">
-                  <div class="arrow"></div>
-                  <div class="arrow"></div>
-                  <div class="arrow"></div>
-                </div>
+           </p>
           </div>
         </div>
       </section>
@@ -311,48 +306,29 @@
 
         <div class="cards row gap-3 justify-center">
           <div class="card col-12-sm col-5-md  br service mb-2">
-            <figure class="snip1200">
-              <img src="/assets/images/projects/we-construct.png" alt="sq-sample32" />
-              <figcaption >
-                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
-                <div class="heading">
-                  <h2 class="text-primary">We <span>Construct</span></h2>
-                </div>
-              </figcaption>
-            </figure>
+            <!-- <img src="/assets/images/projects/we-construct.png" alt=""> -->
+           <div class="content"  >
+              <h2>Dubai</h2>
+              <h3>United Arab Emirates</h3>  
+            </div>
           </div>
           <div class="card col-12-sm col-5-md  br service mb-2">
-            <figure class="snip1200">
-              <img src="/assets/images/projects/search-country.jpg" alt="sq-sample32" />
-              <figcaption >
-                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
-                <div class="heading">
-                  <h2 class="text-primary">Search Country App</h2>
-                </div>
-              </figcaption>
-            </figure>
+            <div class="content"  >
+              <h2>Dubai</h2>
+              <h3>United Arab Emirates</h3>  
+            </div>
           </div>
           <div class="card col-12-sm col-5-md  br service mb-2">
-            <figure class="snip1200">
-              <img src="/assets/images/projects/invoice-app.jpg" alt="sq-sample32" />
-              <figcaption >
-                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
-                <div class="heading">
-                  <h2 class="text-primary">We <span>Construct</span></h2>
-                </div>
-              </figcaption>
-            </figure>
+            <div class="content"  >
+              <h2>Dubai</h2>
+              <h3>United Arab Emirates</h3>  
+            </div>
           </div>
           <div class="card col-12-sm col-5-md  br service mb-2">
-            <figure class="snip1200">
-              <img src="/assets/images/projects/barcode-finder.png" alt="sq-sample32" />
-              <figcaption >
-                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
-                <div class="heading">
-                  <h2 class="text-primary">We <span>Construct</span></h2>
-                </div>
-              </figcaption>
-            </figure>
+            <div class="content"  >
+              <h2>Dubai</h2>
+              <h3>United Arab Emirates</h3>  
+            </div>
           </div>
         </div>
       </section>
