working on projects section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                 <a
                 href="#About-me"
-                class="h4 text-white hero-cta__about display-f align-center bg-primary br-xs mr-3">
+                class="h4 text-white hero-cta__about display-f align-center bg-primary br-sm mr-3">
                 <span class="pl-1">About me</span>
                 <div  class="hero-cta__hire-arrows">
                   <div class="arrow"></div>
@@ -304,33 +304,114 @@
       >
         <h2 class="h2 mb-4"><span class="header-underline">Projects</span></h2>
 
-        <div class="cards row gap-3 justify-center">
-          <div class="card col-12-sm col-5-md  br service mb-2">
-            <!-- <img src="/assets/images/projects/we-construct.png" alt=""> -->
-           <div class="content"  >
-              <h2>Dubai</h2>
-              <h3>United Arab Emirates</h3>  
+        <div class="row gap-3 justify-center">
+          <div class="project col-12-sm col-5-md mb-2">
+            <div class="card  mb-1">
+              <div class="content p-2"  >
+                <h4>
+                  This  is a landing page  that was based on my front-end training task for envato project in HNGi. 
+                  Added some modification on what I want to improve on and
+                  used sass, gulp and javaScript instead of using bootstrap framework.
+                </h4>
+              </div>
             </div>
+           <div class="project__description text-left">
+               <h3 class="h3 text-primary fw-bold">WeConstruct</h3>
+              <div class="project__stacks display-f  mt-1 mb-2">
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-html5"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"> <i class="fa-brands fa-sass"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-gulp"></i></div>
+                <div class="project__stack display-f align-center justify-center"><i class="fa-brands fa-js"></i></div>
+              </div>
+              <div class="project__preview-btns">
+                <a href="https://jeth0214.github.io/Construction-landing-Page/" target="_blank"  class="btn btn-primary text-white mr-3">
+                  Preview Site
+                  
+                </a>
+                <a href="https://github.com/Jeth0214/Construction-landing-Page" target="_blank" class="btn btn-outline-primary">
+                  View Code
+                </a>
+              </div>
+            </div>   
           </div>
-          <div class="card col-12-sm col-5-md  br service mb-2">
+          <div class="project col-12-sm col-5-md mb-2">
+            <div class="card  mb-1">
             <div class="content"  >
-              <h2>Dubai</h2>
-              <h3>United Arab Emirates</h3>  
+                <h2>Dubai</h2>
+                <h3>United Arab Emirates</h3>  
+              </div>
             </div>
+           <div class="project__description text-left">
+               <h3 class="h3 text-primary fw-bold">Search Country App</h3>
+              <div class="project__stacks display-f  mt-1 mb-2">
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-html5"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"> <i class="fa-brands fa-sass"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-angular"></i></i></div>
+                <div class="project__stack display-f align-center justify-center"><p>API</p></div>
+              </div>
+              <div class="project__preview-btns">
+                <a href="#" class="btn btn-primary text-white mr-3">
+                  Preview Site
+                </a>
+                <a href="#" class="btn btn-outline-primary">
+                  View Code
+                </a>
+              </div>
+            </div>   
           </div>
-          <div class="card col-12-sm col-5-md  br service mb-2">
+          <div class="project col-12-sm col-5-md mb-2">
+            <div class="card  mb-1">
             <div class="content"  >
-              <h2>Dubai</h2>
-              <h3>United Arab Emirates</h3>  
+                <h4 class="h4">
+                  
+                </h4>  
+              </div>
             </div>
+           <div class="project__description text-left">
+               <h3 class="h3 text-primary fw-bold">Invoice App</h3>
+              <div class="project__stacks display-f  mt-1 mb-2">
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-html5"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"> <i class="fa-brands fa-sass"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"> <i class="fa-brands fa-bootstrap"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-angular"></i></i></div>
+                <div class="project__stack display-f align-center justify-center"><i class="fa-solid fa-memory"></i></div>
+              </div>
+              <div class="project__preview-btns">
+                <a href="#" class="btn btn-primary text-white mr-3">
+                  Preview Site
+                </a>
+                <a href="#" class="btn btn-outline-primary">
+                  View Code
+                </a>
+              </div>
+            </div>   
           </div>
-          <div class="card col-12-sm col-5-md  br service mb-2">
+          <div class="project col-12-sm col-5-md mb-2">
+            <div class="card  mb-1">
             <div class="content"  >
-              <h2>Dubai</h2>
-              <h3>United Arab Emirates</h3>  
+                <h2>Dubai</h2>
+                <h3>United Arab Emirates</h3>  
+              </div>
             </div>
+           <div class="project__description text-left">
+               <h3 class="h3 text-primary fw-bold">WeConstruct</h3>
+              <div class="project__stacks display-f  mt-1 mb-2">
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-html5"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"> <i class="fa-brands fa-sass"></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"><i class="fa-brands fa-angular"></i></i></div>
+                <div class="project__stack display-f align-center justify-center mr-2"><ion-icon name="logo-ionic"></ion-icon></div>
+                <div class="project__stack display-f align-center justify-center "> <i class="fa-brands fa-laravel"></i></div>
+              </div>
+              <div class="project__preview-btns">
+                <a href="#" class="btn btn-primary text-white mr-3">
+                  Preview Site
+                </a>
+                <a href="#" class="btn btn-outline-primary">
+                  View Code
+                </a>
+              </div>
+            </div>   
           </div>
-        </div>
       </section>
       <!-- End of Projects Section -->
        <!-- Skills -->
@@ -899,5 +980,8 @@
             <h4 class="h4 text-center fw-normal mt-5">COPYRIGHT &copy; WECONSTRUCT | 2023 | ALL RIGHTS RESERVED. </h4>
         </div>
     </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
