adjust images file

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <img
                 class="br-full"
                 loading="lazy"
-                src="/assets/images/hero-section/Hero.png"
+                src="./assets/images/hero-section/Hero.png"
                 alt="Roland Jethro Suyom"
               />
               <a
