added new testimonies

--- a/index.html
+++ b/index.html
@@ -540,10 +540,10 @@
                 <div class="testimonies__message">
                   <p>
                     <em>
-                      <span class="text-primary">WeConstruct</span>
-                      have been leading the construction industry for quiet
-                      sometime now and when they handled our bifrost, they job
-                      was nothing short of amazing.
+                      I am vouching for Roland Jethro Suyom for his remarkable talent as a full-stack developer. 
+                      His exceptional combination of technical proficiency and creativeness sets him apart in this field.
+                      He can consistently accomplish complex challenges. 
+                      What I like about him is that he is independent yet collaborative most of the time.
                     </em>
                   </p>
                 </div>
@@ -553,15 +553,16 @@
                     <img
                       loading="lazy"
                       src="./assets/images/Testimonies/testimonies1.jpg"
-                      alt="King Odin"
+                      alt="Geian Mark V. Denorte"
                     />
                   </div>
-                  <div class="testimonies__client-info">
+                  <div class="testimonies__client-info text-left">
                     <h3 class="testimonies__client-name h3 text-primary">
-                      King Odin
+                      Geian Mark V. Denorte
                     </h3>
                     <p class="testimonies__client-role text-dark-gray">
-                      King of Asgard
+                      <span class="fw-bold">Front-end Developer</span> <br>
+                      ChildVision
                     </p>
                   </div>
                 </div>
@@ -570,10 +571,9 @@
                 <div class="testimonies__message">
                   <p>
                     <em>
-                      We loved working with
-                      <span class="text-primary">WeConstruct</span>! They built
-                      our homes very quickly with the highest of quality. I
-                      would hands down refer them to anyone and everyone!
+                      I met Jethro at a Zuri internship program, where he was our backend developer leader. 
+                      He did really great, encouraging us to be better version of ourselves. 
+                      Under him we were learning faster and better.
                     </em>
                   </p>
                 </div>
@@ -588,10 +588,11 @@
                   </div>
                   <div class="testimonies__client-info text-left">
                     <h3 class="testimonies__client-name h3 text-primary">
-                      Thor son of Odin
+                       Anthony Osadolor
                     </h3>
                     <p class="testimonies__client-role">
-                      King, New Asgardian Residence
+                      <span class="fw-bold">Backend Developer</span> <br>
+                      Digital Web Solutions
                     </p>
                   </div>
                 </div>
