fixed testimonies__client-role font-weight

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <h3 class="testimonies__client-name h3 text-primary">
                       Geian Mark V. Denorte
                     </h3>
-                    <p class="testimonies__client-role text-dark-gray">
+                    <p class="testimonies__client-role">
                       <span class="fw-bold">Front-end Developer</span> <br>
                       ChildVision
                     </p>
