fixed circular menu isue

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           class="row gap-3 justify-space-between about-us__details"
         >
           <div class="col-12-sm col-4-lg about__image">
-          <img src="./assets/images/About/about1.jpg" alt="Roland Jethro Suyom">
+          <img src="./assets/images/About/about2.jpg" alt="Roland Jethro Suyom">
           </div>
           <div class="col-12-sm col-7-lg about__description" >
            <p class="text-light">
@@ -512,11 +512,7 @@
                   </li>
                   <li class="h3">
                     <span class="text-primary"><i class="fa-solid fa-circle-check"></i></span>
-                    <span>Github</span>
-                  </li>
-                  <li class="h3">
-                    <span class="text-primary"><i class="fa-solid fa-circle-check"></i></span>
-                    <span>VsCode</span>
+                    <span>NPM</span>
                   </li>
                 </ul>
               </div>
@@ -561,8 +557,7 @@
                       Geian Mark V. Denorte
                     </h3>
                     <p class="testimonies__client-role">
-                      <span class="fw-bold">Front-end Developer</span> <br>
-                      ChildVision
+                      <span class="fw-bold">Front-end Developer</span> 
                     </p>
                   </div>
                 </div>
@@ -583,7 +578,7 @@
                     <img
                       loading="lazy"
                       src="./assets/images/Testimonies/testimonies2.jpg"
-                      alt="Thor"
+                      alt="Anthony Osadolor"
                     />
                   </div>
                   <div class="testimonies__client-info text-left">
@@ -591,129 +586,13 @@
                        Anthony Osadolor
                     </h3>
                     <p class="testimonies__client-role">
-                      <span class="fw-bold">Backend Developer</span> <br>
-                      Digital Web Solutions
+                      <span class="fw-bold">Backend Developer</span>
+    
                     </p>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonies__item swiper-slide">
-                <div class="testimonies__message">
-                  <p>
-                    <em>
-                      I highly recommend
-                      <span class="text-primary">WeConstruct</span>. They go
-                      above and beyond in what is required to make the customer
-                      happy and we are grateful to have chosen them to build our
-                      headquater.
-                    </em>
-                  </p>
-                </div>
-
-                <div class="testimonies__client text-left">
-                  <div class="testimonies__client-image">
-                    <img
-                      loading="lazy"
-                      src="./assets/images/Testimonies/testimonies3.jpg"
-                      alt="Nick Fury"
-                    />
-                  </div>
-                  <div class="testimonies__client-info text-left">
-                    <h3 class="testimonies__client-name h3 text-primary">
-                      Nick Fury
-                    </h3>
-                    <p class="testimonies__client-role">Head , S.H.E.L.D</p>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonies__item swiper-slide">
-                <div class="testimonies__message">
-                  <p>
-                    <em>
-                      This has been so painless and actually fun to see our
-                      dream building go from a wish on a piece of paper to a
-                      real thing right in front of our eyes. Good eyes even in a
-                      smallest detail.
-                    </em>
-                  </p>
-                </div>
-                <div class="testimonies__client text-left">
-                  <div class="testimonies__client-image">
-                    <img
-                      loading="lazy"
-                      src="./assets/images/Testimonial/testimonies4.jpg"
-                      alt="King T'Challa"
-                    />
-                  </div>
-                  <div class="testimonies__client-info">
-                    <h3 class="testimonies__client-name h3 text-primary">
-                      King T'Challa
-                    </h3>
-                    <p class="testimonies__client-role">King, Wakanda</p>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonies__item swiper-slide">
-                <div class="testimonies__message">
-                  <p>
-                    <em>
-                      They build our tower beyond our expectation with a
-                      reasonable price. The material selections are excellent
-                      and the staffs can answer quickly in case of inquiry.
-                      Kudos to
-                      <span class="text-primary">WeConstruct</span> team.
-                    </em>
-                  </p>
-                </div>
-                <div class="testimonies__client text-left">
-                  <div class="testimonies__client-image">
-                    <img
-                      loading="lazy"
-                      src="./assets/images/Testimonies/testimonies5.jpg"
-                      alt="Tony Stark"
-                    />
-                  </div>
-                  <div class="testimonies__client-info">
-                    <h3 class="testimonies__client-name h3 text-primary">
-                      Tony Stark
-                    </h3>
-                    <p class="testimonies__client-role">
-                      Owner, Stark Industry.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonies__item swiper-slide">
-                <div class="testimonies__message">
-                  <p>
-                    <em>
-                      Amazing
-                      <span class="text-primary"> WeConstruct </span> team. They
-                      are the one who read my mind. The facilities , rooms,
-                      structure and all. The students loves more here in
-                      Xavier's School for Youngsters.
-                    </em>
-                  </p>
-                </div>
-                <div class="testimonies__client text-left">
-                  <div class="testimonies__client-image">
-                    <img
-                      loading="lazy"
-                      src="./assets/images/Testimonies/testimonies6.jpg"
-                      alt="Charles Francis Xavier"
-                    />
-                  </div>
-                  <div class="testimonies__client-info">
-                    <h3 class="testimonies__client-name h3 text-primary">
-                      Prof. Xavier
-                    </h3>
-                    <p class="testimonies__client-role">Owner, X-mansion.</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
@@ -741,7 +620,7 @@
             </div>
           </div>
           <div class="contact__form col-12-xs col-5-md text-light">
-            <h3 class="h3 text-white">Message Me</h3>
+            <h3 class="h3 text-primary">Message Me</h3>
             <form
               class="mt-2 form"
               id="contactForm"
@@ -751,7 +630,7 @@
               novalidate
             >
               <div class="form__group">
-                <label class="h5 text-primary" for="fullName">Full Name</label>
+                <label class="h5 text-white" for="fullName">Full Name</label>
                 <input
                   type="text"
                   name="fullName"
@@ -763,7 +642,7 @@
               </div>
 
               <div class="form__group">
-                <label class="h5 text-primary" for="email">Email Address</label>
+                <label class="h5 text-white" for="email">Email Address</label>
                 <input
                   type="email"
                   name="email"
@@ -775,7 +654,7 @@
               </div>
 
               <div class="form__group">
-                <label class="h5 text-primary" for="message">Message</label>
+                <label class="h5 text-white" for="message">Message</label>
                 <textarea
                   class="form__control form__control--textarea"
                   name="message"
