--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 
               </a>
               <div class="hide-for-medium">
-                <a href="./assets/Resume.pdf" download="Roland-Jethro-Suyom.pdf" class="btn-outline-primary text-white h5 gap-1 display-f justify-center align-center">
+                <a href="./assets/Resume.pdf" download="Roland-Jethro-Suyom.pdf" class="btn-outline-primary text-white fw-bold p-2 h5 gap-1 display-f justify-center align-center">
                  <i class="fa-solid fa-file-arrow-down"></i>
                  Resume
                </a>
@@ -536,6 +536,36 @@
                 <div class="testimonies__message">
                   <p>
                     <em>
+                      He’s a fast learner. Clean and readable code. 
+                      Team player and easy to work with. 
+                      He is very hardworking and able to debug hard issues by himself but not hesitant to ask for guidance when needed. 
+                      Would definitely want to hire him again in my future projects.
+                    </em>
+                  </p>
+                </div>
+
+                <div class="testimonies__client">
+                  <div class="testimonies__client-image">
+                    <img
+                      loading="lazy"
+                      src="./assets/images/Testimonies/testimonies3.jpg"
+                      alt="Jed Allado"
+                    />
+                  </div>
+                  <div class="testimonies__client-info text-left">
+                    <h3 class="testimonies__client-name h3 text-primary">
+                      Jed Enage Allado
+                    </h3>
+                    <p class="testimonies__client-role">
+                      <span class="fw-bold">Freelance Programmer</span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonies__item swiper-slide">
+                <div class="testimonies__message">
+                  <p>
+                    <em>
                       I am vouching for Roland Jethro Suyom for his remarkable talent as a full-stack developer. 
                       His exceptional combination of technical proficiency and creativeness sets him apart in this field.
                       He can consistently accomplish complex challenges. 
@@ -593,6 +623,8 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+            <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
