edit about-me description

--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
           </div>
           <div class="col-12-sm col-7-lg about__description" >
            <p class="text-light">
-            I am a junior full-stack developer with 3 years of experience  looking for a new role in an exciting company.  I mostly use Angular for front-end, 
-            PHP / Laravel for back-end and Ionic for mobile developement,
+            I am a junior full-stack developer with 3 years of experience looking for a new role in an exciting company.  I mostly use Angular for front-end, 
+            PHP / Laravel for back-end and Ionic for mobile development,
              and I can adapt to whatever tools are required. Currently based in Alkhobar, Saudi Arabia 
-             but I’m happy working remotely and have experience in remote teams. I’d love you to check out my works.
+             but I’m happy working remotely and have experience in remote teams. I’d love you to check out my work.
            </p>
           </div>
         </div>
