fixed project 4 description

--- a/index.html
+++ b/index.html
@@ -395,11 +395,10 @@
             <div class="card  mb-1">
             <div class="content p-2"  >
                 <p class="h4">
-                  A very useful full stack app that I created as extension of our warehouse system where 
-                  I can store all the invoices that has the barcode data of all the items within that invoice.
-                  This is a mobile app but not deploy to playstore and appstore. 
-                  I can send you an apk if needed and I deploy a website version of it for preview purposes. 
-                </p>  
+                   A very useful full-stack app that I developed as an extension of our warehouse system. 
+                  Performed CRUD feature on the invoices that have the barcode data of all the items within that invoice.
+                  Saving a lot of time searching invoices in the archives room. 
+                </p> 
               </div>
             </div>
            <div class="project__description text-left">
