--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <h1 class="hero__title h1">Hello! It's me Roland Jethro Suyom</h1>
             <h2 class="hero__position mt-2 mb-1">
-              A Junior <span class="text-primary">Full Stack Developer</span>
+              <span class="text-primary">Full Stack Developer</span>
             </h2>
             <div class="hero__description h4 mb-2">
               <p>Bringing your website ideas to life.</p>
@@ -291,7 +291,7 @@
           </div>
           <div class="col-12-sm col-7-lg about__description" >
            <p class="text-light">
-            I am a junior full-stack developer with 3 years of experience looking for a new role in an exciting company.  I mostly use Angular for front-end, 
+            I am a full-stack developer with 3 years of experience looking for a new role in an exciting company.  I mostly use Angular for front-end, 
             PHP / Laravel for back-end and Ionic for mobile development,
              and I can adapt to whatever tools are required. Currently based in Alkhobar, Saudi Arabia 
              but I’m happy working remotely and have experience in remote teams. I’d love you to check out my work.
