updated about me and projects description

--- a/index.html
+++ b/index.html
@@ -291,9 +291,11 @@
           </div>
           <div class="col-12-sm col-7-lg about__description" >
            <p class="text-light">
-            I am a full-stack developer with 3 years of experience looking for a new role in an exciting company.  I mostly use Angular for front-end, 
-            PHP / Laravel for back-end and Ionic for mobile development,
-             and I can adapt to whatever tools are required. Currently based in Alkhobar, Saudi Arabia 
+            I am a full-stack developer with 3 years of experience looking for a new role in an exciting company.
+             As a freelancer since 2020, I was responsible for developing and maintaining a large-scale  web application. 
+             I also worked on a number of smaller projects, including a mobile app and a web dashboard. 
+             I am confident that I have the skills and experience that you are looking for, and I would be a valuable asset to your team.
+            Currently based in Alkhobar, Saudi Arabia 
              but I’m happy working remotely and have experience in remote teams. I’d love you to check out my work.
            </p>
           </div>
@@ -311,9 +313,8 @@
             <div class="card  mb-1">
               <div class="content p-2"  >
                 <p class="h4">
-                  This  is a responsive landing page  that was based on my front-end training task for envato project in HNGi. 
-                  Added some modification on what I want to improve on and
-                  used sass, gulp and javaScript instead of using bootstrap framework.
+                  A figma design converted into a responsive landing page. 
+                  Used sass, gulp and javaScript instead of using css framework.
                 </p>
               </div>
             </div>
@@ -340,7 +341,9 @@
             <div class="card  mb-1">
             <div class="content p-2"  >
                 <p class="h4">
-                  This is my solution to the REST Countries API with color theme switcher advanced challenge on Frontend Mentor.
+                  A solution to an advanced Frontend Mentor  REST Countries API integration challenge using Angular. 
+                  A responsive app can toggle the color scheme between light and dark mode. 
+                  Searching country and filtered by region featured was added.
                 </p>
               </div>
             </div>
