edit project description

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <span class="text-primary">Full Stack Developer</span>
             </h2>
             <div class="hero__description h4 mb-2">
-              <p>Bringing your website ideas to life.</p>
+              <p>Build  your website ideas to happen.</p>
               <p><span id="auto-type" class="text-primary fw-700"></span></p>
             </div>
             <div class="hero-cta "> 
@@ -314,7 +314,7 @@
               <div class="content p-2"  >
                 <p class="h4">
                   A figma design converted into a responsive landing page. 
-                  Used sass, gulp and javaScript instead of using css framework.
+                  Used SCSS, Gulp and JavaScript instead of using css framework.
                 </p>
               </div>
             </div>
@@ -343,7 +343,7 @@
                 <p class="h4">
                   A solution to an advanced Frontend Mentor  REST Countries API integration challenge using Angular. 
                   A responsive app can toggle the color scheme between light and dark mode. 
-                  Searching country and filtered by region featured was added.
+                  Searching country and filtered by region features was added.
                 </p>
               </div>
             </div>
