update about section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               />
             </div>
             <h1 class="hero__title h1">Hello! It's me Roland Jethro Suyom</h1>
-            <h2 class="hero__position mt-2 mb-1">
+            <h2 class="hero__position mt-2 mb-1 h2">
               <span class="text-primary">Full Stack Developer</span>
             </h2>
             <div class="hero__description h4 mb-2">
@@ -272,7 +272,9 @@
         <h2 class="h2 mb-5 text-center text-white">
           <span class="header-underline">About Me</span>
         </h2>
-        <div class="row gap-3 justify-space-between about-us__details">
+        <div
+          class="row gap-3 justify-space-between about-us__details align-center"
+        >
           <div class="col-12-sm col-4-lg about__image">
             <img
               src="./assets/images/About/about2.jpg"
@@ -281,16 +283,20 @@
           </div>
           <div class="col-12-sm col-7-lg about__description">
             <p class="text-light">
-              I am a full-stack developer with 3 years of experience looking for
-              a new role in an exciting company. As a freelancer since 2020, I
-              was responsible for developing and maintaining a large-scale web
-              application. I also worked on a number of smaller projects,
-              including a mobile app and a web dashboard. I am confident that I
-              have the skills and experience that you are looking for, and I
-              would be a valuable asset to your team. Currently based in
-              Alkhobar, Saudi Arabia but I’m happy working remotely and have
-              experience in remote teams. I’d love you to check out my work.
+              I am a full-stack developer with 3 years of experience in coding,
+              maintaining, and developing websites and applications. I have
+              experience working on a variety of projects, from small personal
+              projects to large enterprise applications. I am a highly motivated
+              and self-directed individual with a strong work ethic. A team
+              player and always willing to help others.
             </p>
+            <div class="text-light">
+              I am currently based in Alkhobar, Saudi Arabia, but I am open to
+              remote work. I am eager to join a team where I can use my skills
+              and experience to make a positive impact. I would be happy to show
+              you my work and you can contact me to discuss my qualifications in
+              more detail.
+            </div>
           </div>
         </div>
       </section>
